src/force-app/main/default/objects/Lead/fields/Lead_Score__c.field-meta.xml
<CustomField>
    <fullName>Lead_Score__c</fullName>
    <label>Lead Score</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>