src/force-app/main/default/objects/Lead/fields/Routing_Status__c.field-meta.xml
<CustomField>
    <fullName>Routing_Status__c</fullName>
    <label>Routing Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Routed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>