src/force-app/main/default/objects/Lead/fields/Scoring_Status__c.field-meta.xml
<CustomField>
    <fullName>Scoring_Status__c</fullName>
    <label>Scoring Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Scored</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>